--- a/app/src/main/res/layout/chat_activity.xml
+++ b/app/src/main/res/layout/chat_activity.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#88a56e">
 
     <EditText
         android:id="@+id/InputBox"
@@ -12,9 +13,14 @@
         android:minLines="2"
         android:maxLines="6"
         android:hint="Share with me"
+        android:fontFamily="sans-serif-medium"
         android:inputType="textMultiLine"
         android:gravity="top|start"
-        android:padding="8dp"
+        android:padding="20dp"
+        android:background="#66975d"
+        android:textColor="#ffffff"
+        android:textColorHint="#ccffffff"
+
 
         app:layout_constraintStart_toStartOf="@id/LeftEdgeGuide"
         app:layout_constraintEnd_toEndOf="@id/RightEdgeGuide"
@@ -43,9 +49,11 @@
 
     <Button
         android:id="@+id/SendButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="32dp"
+        android:layout_width="60dp"
+        app:layout_constraintTop_toTopOf="@id/InputBox"
+        android:layout_height="0dp"
+        android:textSize="24dp"
+        android:background="@drawable/ripple_button"
         android:text="💬"
         app:layout_constraintStart_toEndOf="@id/RightEdgeGuide"
         app:layout_constraintBottom_toBottomOf="@id/InputBox"/>
@@ -54,8 +62,33 @@
         android:id="@+id/ChatView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="24dp"
         app:layout_constraintBottom_toTopOf="@+id/InputBox"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/TitleText"/>
+
+    <TextView
+        android:id="@+id/TitleText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="MindHaven\nShare Your Worries, Ease Your Mind"
+        android:textSize="18sp"
+        android:textColor="#FAF3E0"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:fontFamily="sans-serif-medium"
+        android:lineSpacingExtra="6dp"
+        android:letterSpacing="0.03"
+        app:layout_constraintTop_toTopOf="@id/TitleGuide"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/TitleGuide"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.1" />
 </androidx.constraintlayout.widget.ConstraintLayout>
