--- a/app/src/main/res/layout/message_user.xml
+++ b/app/src/main/res/layout/message_user.xml
@@ -1,17 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="8dp"
-    android:gravity="end"
-    android:orientation="horizontal">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:padding="4dp"
+    android:background="@drawable/bubble_user">
 
     <TextView
         android:id="@+id/messageText"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textColor="#000000"
-        android:padding="12dp"
-        android:text="User message"
-        android:textSize="16sp"/>
-</LinearLayout>
+        android:fontFamily="sans-serif-medium"
+        android:textColor="#EEE8E2"
+        android:padding="10dp"
+        android:gravity="end"
+        android:textAlignment="viewEnd"
+        android:text="User response"
+        android:textSize="16sp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
