--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,38 +3,46 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#E8F5E9">
 
-    <Button
-        android:id="@+id/ChatButton"
+    <TextView
+        android:id="@+id/welcomeText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Start Chat"
-        app:layout_constraintBaseline_toTopOf="@id/ChatButtonGuide"
+        android:text="Welcome to MindHaven"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:textColor="#4CAF50"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="40dp" />
+        android:layout_marginTop="32dp"/>
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/ChatButtonGuide"
-        android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/descriptionText"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.3" />
-
-    <Button
-        android:id="@+id/BackupButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TestXML"
-        app:layout_constraintBaseline_toTopOf="@id/BackupButtonGuide"
+        android:text="Your safe space for mental wellness and emotional support"
+        android:textSize="16sp"
+        android:textColor="#666666"
+        android:gravity="center"
+        android:layout_marginHorizontal="32dp"
+        app:layout_constraintTop_toBottomOf="@id/welcomeText"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="80dp"/>
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/BackupButtonGuide"
-        android:layout_width="wrap_content"
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.5" />
+        android:layout_gravity="bottom"
+        android:background="#E8F5E9"
+        android:elevation="8dp"
+        app:itemIconTint="#4CAF50"
+        app:itemTextColor="#4CAF50"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:menu="@menu/bottom_navigation_menu" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
