--- a/app/src/main/res/layout/chat_activity.xml
+++ b/app/src/main/res/layout/chat_activity.xml
@@ -116,14 +116,22 @@
         app:layout_constraintBottom_toTopOf="@id/TitleText"
         />
 
-    <Button
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/addChatButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add Chat"
-        android:layout_margin="8dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="16dp"
+        android:contentDescription="Add Chat"
+        app:srcCompat="@drawable/ic_add"
+        app:backgroundTint="#4CAF50"
+        app:layout_constraintBottom_toBottomOf="@id/AddChatGuide"
         app:layout_constraintStart_toStartOf="parent"
         />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/AddChatGuide"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.15" />
 </androidx.constraintlayout.widget.ConstraintLayout>
