--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -6,34 +6,6 @@
     android:layout_height="match_parent"
     android:background="#E8F5E9">
 
-    <TextView
-        android:id="@+id/welcomeText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Welcome to MindHaven"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        android:textColor="#4CAF50"
-        app:layout_constraintTop_toTopOf="@id/welcomeTextGuide"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        />
-
-    <TextView
-        android:id="@+id/descriptionText"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Your safe space for mental wellness and emotional support"
-        android:textSize="19sp"
-        android:textColor="#D8C3A5"
-        android:textStyle="bold"
-        android:gravity="center"
-        android:layout_marginHorizontal="32dp"
-        app:layout_constraintTop_toBottomOf="@id/welcomeText"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="50dp"/>
-
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
@@ -51,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.75" />
+        app:layout_constraintGuide_percent="0.6" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/StartChatFAB"
@@ -59,12 +31,12 @@
         android:layout_height="wrap_content"
         android:clickable="true"
         android:contentDescription="Start a new chat"
-        app:fabCustomSize="80dp"
+        app:fabCustomSize="65dp"
         app:srcCompat="@drawable/ic_message"
-        app:maxImageSize="48dp"
+        app:maxImageSize="32dp"
         app:layout_constraintTop_toTopOf="@id/StartChatGuide"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="32dp" />
+        android:layout_marginEnd="38dp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/BookListRecyclerView"
@@ -84,7 +56,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.73" />
+        app:layout_constraintGuide_percent="0.6" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/BookListLeftEdge"
@@ -101,35 +73,19 @@
         app:layout_constraintGuide_percent="0.9" />
 
     <TextView
-        android:id="@+id/RecommendationText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Inspiration Shelf"
-        android:textSize="22sp"
-        android:textStyle="bold"
-        android:textColor="#4CAF50"
-        android:layout_gravity="center_horizontal"
-        android:background="@drawable/recommendation_background"
-        app:layout_constraintBottom_toBottomOf="@id/RecommendationTitleGuide"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        />
-
-    <TextView
         android:id="@+id/dailyQuoteText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Click to get inspiration!"
-        android:textSize="30sp"
+        android:text="Turn left for inspiration. Turn right to share with us!"
+        android:textSize="20sp"
         android:textColor="#7F8FA6"
-        android:padding="16dp"
         android:layout_gravity="center_horizontal"
-        android:maxHeight="200dp"
+        android:maxHeight="80dp"
         android:textAlignment="center"
         android:background="@drawable/quote_background"
         android:gravity="center"
         android:lineSpacingExtra="4dp"
-        android:maxWidth="300dp"
+        android:maxWidth="500dp"
         android:fadingEdge="vertical"
         android:scrollbars="vertical"
         android:scrollbarThumbVertical="@drawable/scrollbar_thumb"
@@ -138,22 +94,15 @@
         app:layout_constraintTop_toBottomOf="@id/DailyQuoteGuide"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-    />
+        />
 
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/RecommendationTitleGuide"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.49" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/DailyQuoteGuide"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.21" />
+        app:layout_constraintGuide_percent="0.61" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/newQuoteFAB"
@@ -173,47 +122,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.23" />
+        app:layout_constraintGuide_percent="0.624" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/newQuoteVerticalGuid"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.97" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/welcomeTextGuide"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.05" />
-
-    <TextView
-        android:id="@+id/chatPromptText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Feel like sharing?\nTap the button anytime."
-        android:textSize="19sp"
-        android:textColor="#7D6EAD"
-        android:letterSpacing="0.05"
-        android:lineSpacingExtra="4dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="24dp"
-        android:layout_gravity="center_horizontal"
-        android:textAlignment="center"
-        android:background="@drawable/chat_prompt_bg"
-        app:layout_constraintTop_toBottomOf="@id/ChatHintTextGuide"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/ChatHintTextGuide"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.76" />
-
+        app:layout_constraintGuide_percent="0.13" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
