--- a/app/src/main/res/drawable/quote_background.xml
+++ b/app/src/main/res/drawable/quote_background.xml
@@ -1,5 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#EAF2FF"/>
-    <corners android:radius="12dp"/>
-    <stroke android:width="1dp" android:color="#A29BFE"/>
+    <solid android:color="#0F7D6EAD"/>
+    <corners android:radius="16dp"/>
 </shape>
