--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -2,14 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/navigation_home"
-        android:icon="@android:drawable/ic_menu_compass"
-        android:title="Main" />
+        android:icon="@drawable/ic_nav_home"
+        android:title="Home" />
     <item
         android:id="@+id/navigation_chat"
-        android:icon="@android:drawable/ic_menu_send"
-        android:title="Start Chat" />
+        android:icon="@drawable/ic_nav_chat"
+        android:title="Chat" />
     <item
         android:id="@+id/navigation_profile"
-        android:icon="@android:drawable/ic_menu_myplaces"
+        android:icon="@drawable/ic_nav_profile"
         android:title="Profile" />
 </menu> 
